--- a/src/site/notes/Garden/一朴心的数字花园.md
+++ b/src/site/notes/Garden/一朴心的数字花园.md
@@ -1,5 +1,6 @@
 ---
-{"title":"Home","dg-publish":true,"dg-home:":"true","permalink":"/garden//","dgPassFrontmatter":true,"noteIcon":""}
+{"dg-publish":true,"permalink":"/garden//","dgPassFrontmatter":true,"noteIcon":""}
 ---
+
 
 你好呀
