--- a/src/site/notes/Garden/一朴心的数字花园.md
+++ b/src/site/notes/Garden/一朴心的数字花园.md
@@ -1,6 +1,6 @@
 ---
-{"dg-publish":true,"permalink":"/garden//","dgPassFrontmatter":true,"noteIcon":""}
+{"dg-publish":true,"permalink":"/Garden/一朴心的数字花园/","dgPassFrontmatter":true,"noteIcon":""}
 ---
 
 
-你好呀
+你好呀!
