--- a/src/site/notes/Garden/一朴心的数字花园.md
+++ b/src/site/notes/Garden/一朴心的数字花园.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/Garden/一朴心的数字花园/","dgPassFrontmatter":true,"noteIcon":""}
+{"dg-publish":true,"dg-home":"true","permalink":"/Garden/一朴心的数字花园/","tags":["gardenEntry"],"dgPassFrontmatter":true,"noteIcon":""}
 ---
 
 
