--- a/src/site/notes/Garden/读后感：心理护工.md
+++ b/src/site/notes/Garden/读后感：心理护工.md
@@ -1,5 +1,5 @@
 ---
-{"title":"在心理科当护工，我找到女儿自杀的真相","dg-publish":true,"permalink":"/Garden/读后感：心理护工/","dgPassFrontmatter":true,"noteIcon":""}
+{"title":"在心理科当护工，我找到女儿自杀的真相","dg-publish":true,"dg-home":"false","permalink":"/Garden/读后感：心理护工/","tags":["gardenEntry"],"dgPassFrontmatter":true,"noteIcon":""}
 ---
 
 ![](https://imagepphcloud.thepaper.cn/pph/image/293/898/635.jpg)
