--- a/src/site/notes/Garden/一个里程碑.md
+++ b/src/site/notes/Garden/一个里程碑.md
@@ -2,7 +2,6 @@
 {"title":"Our Garden","dg-publish":true,"dg-home":"true","permalink":"/Garden/一个里程碑/","tags":["gardenEntry"],"dgPassFrontmatter":true,"noteIcon":""}
 ---
 
+# 一个里程碑
 
 你好呀，Memento  mori
-
-[[Garden/读后感：心理护工\|读后感：心理护工]]
