--- a/src/site/notes/Garden/读后感：心理护工.md
+++ b/src/site/notes/Garden/读后感：心理护工.md
@@ -4,7 +4,9 @@
 
 ![](https://imagepphcloud.thepaper.cn/pph/image/293/898/635.jpg)
 
+# 幸福的样子
 
+![幸福的样子](https://img-blog.csdnimg.cn/direct/4fa451889f7d43b39fc2d442ec6b42fe.jpeg)
 
 ---
 
